# voice-to-claude

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GITFLOW.md  LICENSE  Makefile  PROJECT_SUMMARY.md  PUBLISHING_GUIDE.md  QUICKSTART.md  QUICKSTART_COLLAB.md  QUICK_START_SESSION.md  README.md  README_OLD.md  SESSION_MODE.md  UPGRADE_SUMMARY.md  init_git.sh  init_repo.sh  install.sh  install_daemon.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  start.sh  start_session.sh  test.sh  verify.sh  voice_daemon.py  voice_session.py  voice_to_claude.py
.github/: CI_CD.md  CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  QUICKSTART_DEV.md  QUICK_START_SESSION.md  SESSION_MODE.md
scripts/: launch_detached.sh  setup.sh  start_session.sh  verify.sh
src/voice_to_claude/: __init__.py  voice_daemon.py  voice_realtime.py  voice_session.py  voice_to_claude.py
tests/: __init__.py  conftest.py  test_config.py  test_imports.py  test_scripts_syntax.py
